Fixes login ux on small devices

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -8,5 +8,5 @@
 
 #loginPanel {
   width: 600px;
-  max-width: 100%;
+  max-width: 50%;
 }
